🐞 fix: fix z-index of app header

--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ body[data-theme="dark"] {
 
 .app-header {
   position: relative;
-  z-index: 1;
+  z-index: 100;
   display: flex;
   align-items: center;
   justify-content: space-between;
